--- a/application-test.properties
+++ b/application-test.properties
@@ -1,5 +1,5 @@
 spring.application.name=mall-config-server
-server.port=8000
+server.port=9020
 #服务器注册中心配置
 #consul
 spring.cloud.consul.host=127.0.0.1
@@ -13,9 +13,9 @@ spring.cloud.consul.discovery.healthCheckInterval=5s
 spring.cloud.consul.discovery.instance-id=${spring.application.name}-${server.port}
 ############Git为配置中心####################
 # 配置git仓库地址
-spring.cloud.config.server.git.uri=https://github.com/yuangungunfeng/spring-cloud-config-mall-repo
+spring.cloud.config.server.git.uri=https://github.com/yuangungunfeng/spring-cloud-config
 # 配置仓库路径
-spring.cloud.config.server.git.search-paths=mall-config-repo 
+spring.cloud.config.server.git.search-paths=mall-repo
 # 配置仓库的分支
 spring.cloud.config.label=master
 # 访问git仓库的用户名
